			   XPCE ChangeLog
			   ==============

VERSION 6.2.16, distributed with SWI-Prolog 5.3.7
=================================================

* FIXED: PceEmacs: make matching bracket highlighting work after
  text-modifying commands.

* FIXED: cross-referencer to handle #! script file.


VERSION 6.2.15, distributed with SWI-Prolog 5.3.6
=================================================

* ADDED: PceEmacs: Highlight of matching bracket in language mode. 
  Suggested by Maurizio Colucci.

* ENHANCED: make view->colour and editor->colour all set the foreground
  colour of the text.


VERSION 6.2.14, distributed with SWI-Prolog 5.3.3
=================================================

* INSTALL: Avoid accessing the X11 display when building the online
  manual index to facilitate building in environments that do not
  support X11.


VERSION 6.2.13, distributed with SWI-Prolog 5.2.13/5.3.2
========================================================

* FIXED: Avoid excessive amount amount of ->report: status, '' from
  keybinding (Laurens van der Meij).

* FIXED: Bug#113: ERROR: - ->initialise: Argument 1 (left): `expression'
  expected, found `Unexpected ` in PceEmacs on some errors in Prolog mode
  (Hugo Ferreira).

* FIXED: Bug#117: PceEmacs to confirm overwrite when writing to	a `save_file'.
  Extended `file_item->exists' for this purpose (Hugo Ferreira).

* FIXED: Bug#111: date(0,0,0,1,1,1970).  Fabien Todescato.  See documentation
  of date->set for details.


VERSION 6.2.11, distributed with SWI-Prolog 5.2.11
==================================================

* ENHANCED: pullright menu handling.

* MODIFIED/FIXED: `node<-contained_in' now fails if the node is not
  contained in a tree (rather than returning the incorrect @nil).

* ADDED: library(url_image) providing class url_image.

* ADDED: library(scaledbitmap) providing class scaled_bitmap.

* FIXED: Bug#104: PceEmacs find-file `Browse' to use Open rather than Save